--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ MarkupSafe==1.1.1
 oauthlib==3.1.0
 passgen==1.1.1
 passlib==1.7.4
+psycopg2==2.7.7
 pycparser==2.20
 python-dateutil==2.8.1
 python-dotenv==0.15.0
