--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ oauthlib==3.1.0
 passgen==1.1.1
 passlib==1.7.4
 psycopg2==2.7.7
+psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
 python-dotenv==0.15.0
