--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+cloudinary==1.25.0
 cryptography==3.4.6
 Flask==1.1.2
 Flask-Dance==3.3.1
@@ -27,6 +28,7 @@ MarkupSafe==1.1.1
 oauthlib==3.1.0
 passgen==1.1.1
 passlib==1.7.4
+psycopg2==2.7.7
 psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
